Video chat JS now loads

--- a/frontend/public/chat.html
+++ b/frontend/public/chat.html
@@ -127,9 +127,9 @@
         <div class="HoverState">End Call</div>
       </div>
     </div>
-
+    
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/socket.io-client@2/dist/socket.io.js"></script>
     <script src="../js/snackbar.js"></script>
     <script src="../js/autolink.js"></script>
     <script src="https://cdn.rawgit.com/muaz-khan/DetectRTC/master/DetectRTC.js"></script>
